<resources>
    <string name="app_name">Shopey</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">continue with Google</string>
    <string name="continue_with_apple">continue with Apple</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="or_continue_with">or continue with</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_to_your_account">Login to Your Account</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="country">country</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="continue1">Continue</string>
    <string name="create_new_pin">Create New Pin</string>
    <string name="add_a_pin_number_to_make_your_account_more_secure">Add a PIN number to make your account more secure</string>
    <string name="set_your_fingerprint">Set Your Fingerprint</string>
    <string name="add_a_fingerprint_to_make_your_account_more_secure">Add a fingerprint to make your account more secure</string>
    <string name="please_put_your_finger_on_the_fingerprint_scanner_to_get_started">Please put your finger on the fingerprint scanner to get started</string>
    <string name="skip">Skip</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address</string>
    <string name="notification">Notification</string>
    <string name="security">Security</string>
    <string name="payment">Payment</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="log_out">Logout</string>
    <string name="Update">Update</string>
    <string name="generalNotification">General Notification</string>
    <string name="Sound">Sound</string>
    <string name="Vibrate">Vibrate</string>
    <string name="specialOffers">Special Offers</string>
    <string name="promoAndDiscount"><![CDATA[Promo & Discount]]></string>
    <string name="cashback">Cashback</string>
    <string name="appUpdate">App Update</string>
    <string name="newServiceAvailable">New Service Available</string>
    <string name="newTipsAvailable">New Tips Available</string>
    <string name="select_which_contact_details_should_we_use_to_reset_your_password">Select which contact details should we use to reset your password</string>
    <string name="Verify">Verify</string>
</resources>