<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.ziad_emad_739.shopey.ui.First">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/start_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_you_in"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_continue_with"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/facebook"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconSize="30dp"
            app:iconTint="@null" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_continue_with"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/google"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconSize="30dp"
            app:iconTint="@null" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_continue_with"
            android:text="@string/continue_with_apple"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/apple"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconSize="30dp"
            app:iconTint="@null" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/back_gray"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="16sp"
                android:padding="5dp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/back_gray"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_sign"
            android:padding="10dp"
            android:stateListAnimator="@null"
            android:elevation="10dp"
            android:text="@string/sign_in_with_password"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/hard_gray"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:padding="5dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>