<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainFragments.Profile">

    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ziad Emad"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01270243729"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/hard_gray"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/EditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/edit_profile"
                android:textSize="21sp"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                app:drawableStartCompat="@drawable/profile_24"
                android:drawablePadding="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/address"
                android:textSize="21sp"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                app:drawableStartCompat="@drawable/address"
                android:drawablePadding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/notification"
                android:textSize="21sp"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                app:drawableStartCompat="@drawable/notification"
                android:drawablePadding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/payment"
                android:textSize="21sp"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                app:drawableStartCompat="@drawable/payment"
                android:drawablePadding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/security"
                android:textSize="21sp"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                app:drawableStartCompat="@drawable/protection"
                android:drawablePadding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/language"
                android:textSize="21sp"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                app:drawableStartCompat="@drawable/language"
                android:drawablePadding="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/dark_mode"
                    android:textSize="21sp"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/eye"
                    android:drawablePadding="20dp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/privacy_policy"
                android:textSize="21sp"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                app:drawableStartCompat="@drawable/lock"
                android:drawablePadding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/help_center"
                android:textSize="21sp"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                app:drawableStartCompat="@drawable/info"
                android:drawablePadding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/invite_friends"
                android:textSize="21sp"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                app:drawableStartCompat="@drawable/group"
                android:drawablePadding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:text="@string/log_out"
                android:textSize="21sp"
                android:textColor="@color/red"
                app:drawableStartCompat="@drawable/logout"
                android:drawablePadding="20dp"
                app:drawableTint="@color/red" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>