<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FingerPrint">

    <include
        android:id="@+id/MyToolbar"
        layout="@layout/toolbar_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyToolbar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_fingerprint_to_make_your_account_more_secure"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginTop="70dp"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="70dp"
                android:src="@drawable/fingerprint"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_put_your_finger_on_the_fingerprint_scanner_to_get_started"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginTop="80dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="90dp"
                android:padding="10dp">

                <Button
                    android:id="@+id/Skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/button_skip"
                    android:padding="10dp"
                    android:text="@string/skip"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/Continue1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_sign"
                    android:padding="10dp"
                    android:text="@string/continue1"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:backgroundTint="@null" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>